needed to run from branch

--- a/.github/workflows/build-core-arm-mac.yml
+++ b/.github/workflows/build-core-arm-mac.yml
@@ -16,6 +16,7 @@ name: build-core-arm-mac
         required: false
         type: boolean
         default: true
+  pull_request: -- Add this here
 jobs:
   build-core:
     runs-on: macos-13-xlarge
